fix img div overflow bug

--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,8 @@ a{
 
 .section-1{
     max-width: 100vw;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .hero{
@@ -70,6 +72,8 @@ a{
     align-items: center;
     width: 35%;
     gap: 10px;
+    min-width: 600px;
+    max-width: 600px;
 }
 
 
@@ -87,10 +91,11 @@ a{
 
 
 img{
-    margin: 100px 0 0 550px;
+    /* margin: 100px 0 0 550px; */
     height:220px;
     border-radius: 50%;
     flex-shrink: 0;
+    margin-right: 500px;
 }
 
 
